# aoc-2023-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.zig  new_day.py
cmake/: Sanitizers.cmake  Warnings.cmake
day00/: CMakeLists.txt
day00/include/: solution.hpp
day00/src/: main.cpp  solution.cpp
day01/: CMakeLists.txt
day01/include/: solution.hpp
day01/src/: main.cpp  solution.cpp
shared/: CMakeLists.txt
shared/include/: utility.hpp
shared/src/: utility.cpp
src/: day.cpp  main.cpp
src/day00/: day00.cpp
